--- a/views/contactanos.html
+++ b/views/contactanos.html
@@ -4,39 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- linkeo bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <!-- linkeo css -->
     <link rel="stylesheet" href="../style/style.css">
+    <!-- linkeo fuentes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <title>Vcrux</title>
+    <title>Proyecto</title>
+    
 </head>
 <body>
      <!-- header>div>ul>(li>a)*3 forma abreviada de hacer un header con 3 li -->
      <header>
-        <div>
-            <ul>
-                <li>
-                    <a href="../index.html">Inicio</a>
-                </li>
-                <li>
-                    <a href="./e-commerce.html">E-commerce</a>
-                </li>
-                <li>
-                    <a href="./DesarrolloWeb.html">Desarrollo Web</a>
-                </li>
-                <li>
-                    <a href="./nosotros.html">Nosotros</a>
-                </li>
-                <li>
-                    <a href="./contactanos.html">Contactanos</a>
-                </li>
-               
-                
-               
- 
-             </ul>
-        </div>
-
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+               <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav nav-flex">
+                  <li class="nav-item">
+                    <a class=" active" href="../index.html">INICIO</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class=" active" href="./views/e-commerce.html">E-COMMERCE</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class=" active" href="./views/DesarrolloWeb.html">DESARROLLO WEB</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class=" active" href="./views/nosotros.html">NOSOTROS</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class=" active" href="./views/contactanos.html">CONTACTANOS</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
     <main>
         <h1>Contactanos</h1>
