--- a/style/style.css
+++ b/style/style.css
@@ -20,6 +20,12 @@
  header{
     background-color: rgba(7, 255, 243, 0.719);  
  }
+
+ header ul{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+ }
  
 
  .BodyIndex header{
@@ -35,13 +41,21 @@
     font-family: 'Bebas Neue', cursive;   
 }
 
+header li a:hover{
+    color: white;
+}
+
 .TituloIndex{
     grid-area: tituloIndex;
     
  }
 
+ .TituloIndex h1:hover{
+    color: rgba(7, 255, 243, 0.719);   
+ }
+
  .TituloIndex h1{
-    color: rgb(0, 255, 242);
+    color: rgb(255, 255, 255);
     text-align: center;
     font-size: 15rem;
     margin: 7rem 0 0 0;   
@@ -172,4 +186,126 @@ footer{
     font-size: 1rem;
     color: rgb(0, 0, 0);
     margin: 2rem 0 2rem 0;
+}
+
+
+/* inicio de css contactanos */
+
+.BodyContactanos{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.BodyContactanos form{
+    display: grid;
+    grid-template-areas: 
+    "tituloContacto tituloContacto"
+    "nombreForm nombreInput"
+    "servicioForm servicioInput"
+    "comentariosForm comentariosForm"
+    "comentariosInput comentariosInput"
+    "terminos terminos"
+    "botonesForm botonesForm";
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(7, 255, 243, 0.267);
+    grid-row-gap: 1rem;
+    padding: 4rem 0;
+    border:solid 5px white;
+    margin: 4rem 30rem;
+    border-radius: 1rem 8rem 1rem 8rem;
+    
+}
+
+.TituloContacto{
+    grid-area: tituloContacto;
+    color: white;
+    justify-self: center;
+}
+
+.TituloContacto h3{
+    font-size: 4rem;
+}
+
+.NombreForm{
+    grid-area: nombreForm;
+    color: white;
+    font-size: 1.4rem;
+}
+
+.NombreInput{
+    grid-area: nombreInput;
+    border-radius: 1rem ;
+    font-size: 1.2rem;
+}
+
+.ServicioForm{
+    grid-area: servicioForm;
+    color: white;
+    font-size: 1.4rem;
+}
+
+.ServicioInput{
+    grid-area: servicioInput;
+    border-radius: 1rem ;
+    font-size: 1.2rem;
+}
+
+.ComentariosForm{
+    grid-area: comentariosForm;
+    color: white;
+    font-size: 1.4rem;
+}
+
+.ComentariosInput{
+    grid-area: comentariosInput;
+    border-radius: 1rem ;
+}
+
+.ComentariosInput textarea{
+    border-radius: 1rem ;
+}
+
+.Terminos{
+    grid-area: terminos;
+    color: white;
+    font-size: 1.2rem;  
+    justify-self: center;
+    margin: 2rem 0;
+}
+
+.BotonesForm{
+    grid-area: botonesForm;
+    display: flex;
+    justify-content: center;
+
+
+}
+
+.Boton{
+    margin: 0 3rem;
+}
+
+.Boton button{
+    font-size: 1.2rem;
+    background-color:rgba(0, 0, 0, 0);;
+    border: solid 3px white;
+    color: white;
+    padding: 0.5rem;
+}
+
+.Mapa iframe{
+    width: 50rem;
+    height: 30rem;
+    
+}
+
+.Mapa{
+    justify-self: center;
+    border: solid 10px white;
+    padding: 0%;
+    display: flex;
+    justify-content: center;
+    margin: 2rem 35rem;
 }
