--- a/style/style.css
+++ b/style/style.css
@@ -4,8 +4,8 @@
     width: 100%;
     background-image: url("../sources/imagenes/fondo_3.jpg");
 }
- 
- .BodyIndex {
+ /* habia maquetado en grids */
+ /* .BodyIndex {
     display: grid;
     grid-template-areas: 
     "headerInd headerInd"
@@ -15,10 +15,11 @@
     "servicio1 servicio2"
     "footerIndex footerIndex"
     ;
- }
+ } */
 
  header{
     background-color: rgba(7, 255, 243, 0.719);  
+    width: 100%;
  }
 
  header ul{
@@ -36,7 +37,7 @@
  header li a{
     color: rgb(0, 0, 0);
     text-decoration: none;
-    font-size: 2.5rem ; 
+    font-size: 2rem ; 
     margin: 0 2rem;
     font-family: 'Bebas Neue', cursive;   
 }
@@ -97,11 +98,12 @@ header li a:hover{
     margin: 5rem 0 ;
 }
 
-.Servicios{
+.ContenedorIndex{
     display: flex;
     justify-content: center;
     justify-content: space-around;
     margin: 5rem 0 10rem 0;
+    align-items: center;
 }
 
 .TituloSeccion{
@@ -122,6 +124,10 @@ header li a:hover{
 .Servicio2{
     grid-area: servicio2;
     justify-self: center;  
+}
+
+.ContenedorIndex{
+    display: flex;
 }
 
 .FooterIndex{
@@ -194,7 +200,7 @@ footer{
 .BodyContactanos{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
 }
 
 .BodyContactanos form{
@@ -213,9 +219,9 @@ footer{
     grid-row-gap: 1rem;
     padding: 4rem 0;
     border:solid 5px white;
-    margin: 4rem 30rem;
+    margin: 4rem ;
     border-radius: 1rem 8rem 1rem 8rem;
-    
+    width: 80rem;
 }
 
 .TituloContacto{
@@ -302,10 +308,155 @@ footer{
 }
 
 .Mapa{
-    justify-self: center;
     border: solid 10px white;
     padding: 0%;
     display: flex;
     justify-content: center;
     margin: 2rem 35rem;
+}
+
+@media only screen and (max-width: 768px){
+    *{
+        padding: 0%;
+        margin: 0%;
+    }
+
+    header li a{
+        font-size: 1.5rem ; 
+    }
+
+    .TituloIndex h1{
+        font-size: 7rem;
+    }
+
+    .LogoVcrux img{
+        width: 8rem;
+    }
+
+    .ContenedorIndex{
+        flex-direction: column;
+    }
+
+    .TituloSeccion{
+        font-size: 1.3rem;
+        padding-top: 1rem;
+    }
+    
+    .ParrafoSeccion{
+        font-size: 1rem;
+        padding-bottom: 1rem;
+    }
+
+    .TituloServicios h3{
+        font-size: 2.5rem;
+        margin-top: 10rem;     
+    }
+
+    .NuestroServicios{
+        width: 23rem;
+        border: solid 3px white;
+        margin: 2rem 0 ;
+        height: 10rem;
+        padding: 1rem;
+    }
+
+    .Copy{
+        font-size: 0.5rem;
+    }
+
+    .Instagram img{
+        width: 45px;
+    }
+    
+    .Instagram a{
+        font-size: 1rem;
+    }
+    
+   
+    .Whatsapp img{
+        width: 40px;
+    }
+    
+    .Whatsapp a{
+        font-size: 1rem;
+    }
+
+    .BodyContactanos form{
+        padding: 2rem;
+        border:solid 5px white;
+        margin: 4rem 0 ;
+        border-radius: 1rem 2rem 1rem 2rem;
+        width: 20rem;
+        grid-row-gap: 0.2rem;
+    }
+
+    
+    .TituloContacto h3{
+        font-size: 2rem;
+    }
+    
+    .NombreForm{
+        font-size: 0.8rem;
+        justify-self: end;
+        margin-right: 1rem;
+    }
+    
+    .NombreInput{
+        font-size: 0.5rem;
+        width: 10rem;
+    }
+    
+    .ServicioForm{
+        font-size: 0.8rem;
+        justify-self: end;
+        margin-right: 1rem;
+    }
+    
+    .ServicioInput{
+        font-size: 0.5rem;
+        width: 10rem;
+    }
+    
+    .ComentariosForm{
+        font-size: 0.8rem;
+        margin-left: 3rem;
+    }
+    
+    .ComentariosInput{
+        grid-area: comentariosInput;
+        border-radius: 1rem ;
+        justify-self: center;
+    }
+    
+    
+    .Terminos{
+        font-size: 0.9rem;  
+    }
+   
+    
+    .Boton button{
+        font-size: 0.8rem;
+        background-color:rgba(0, 0, 0, 0);;
+        border: solid 3px white;
+        color: white;
+        padding: 0.5rem;
+    }
+    
+    .Mapa iframe{
+        width: 20rem;
+        height: 20rem;
+        
+    }
+    
+    .Mapa{
+        border: solid 5px white;
+    }
+
+    textarea{
+        width: 15rem;
+        height: 10rem;
+    }
+
+
+
 }
