--- a/views/contactanos.html
+++ b/views/contactanos.html
@@ -17,36 +17,38 @@
     <!-- linkeo aos -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Proyecto</title>
-    
 </head>
 <body class="BodyContactanos">
      <!-- header>div>ul>(li>a)*3 forma abreviada de hacer un header con 3 li -->
      <header>
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-               <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav nav-flex">
-                  <li class="nav-item">
-                    <a class=" active" href="../index.html">INICIO</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class=" active" href="./views/e-commerce.html">E-COMMERCE</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class=" active" href="./views/DesarrolloWeb.html">DESARROLLO WEB</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class=" active" href="./views/nosotros.html">NOSOTROS</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class=" active" href="./views/contactanos.html">CONTACTANOS</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-    </header>
-    <form>
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="active" href="../index.html">INICIO</a>
+              </li>
+              <li class="nav-item">
+                <a class="active" aria-current="page" href="../views/e-commerce.html">E-COMMERCE</a>
+              </li>
+              <li class="nav-item">
+                <a class="active" href="../views/DesarrolloWeb.html">DESARROLLO WEB</a>
+              </li>
+              <li class="nav-item">
+                <a class="active" href="../views/nosotros.html">NOSOTROS</a>
+              </li>
+              <li class="nav-item">
+                <a class=" active " href="../views/contactanos.html" >CONTACTANOS</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+</header>
+    <form class="container-fluid">
          <div class="TituloContacto">
            <h3>CONTACTO</h3>
          </div>
@@ -81,7 +83,7 @@
     <div class="Mapa">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.0168878894488!2d-58.383759084189954!3d-34.60373446500717!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4aa9f0a6da5edb%3A0x11bead4e234e558b!2sObelisco!5e0!3m2!1ses-419!2sar!4v1666725427453!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
-    <footer>
+    <footer class="container-fluid">
         <div class="Contactanos">
             <a href="./views/contactanos.html"><h3>Contactanos</h3></a>
         </div>
@@ -96,7 +98,6 @@
         <div class="Copy">
             <p>Copyright © 2022 Vcrux_Gaming Inc. Todos los derechos reservados</p>
         </div>
-        
      </footer>
 </body>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
