--- a/views/e-commerce.html
+++ b/views/e-commerce.html
@@ -1,44 +1,88 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <title>Vcrux</title>
-</head>
-
-<body>
-     <!-- header>div>ul>(li>a)*3 forma abreviada de hacer un header con 3 li -->
-     <header>
-        <div>
-            <ul>
-                <li>
-                    <a href="../index.html">Inicio</a>
-                </li>
-                <li>
-                    <a href="./e-commerce.html">E-commerce</a>
-                </li>
-                <li>
-                    <a href="./DesarrolloWeb.html">Desarrollo Web</a>
-                </li>
-                <li>
-                    <a href="./nosotros.html">Nosotros</a>
-                </li>
-                <li>
-                    <a href="./contactanos.html">Contactanos</a>
-                </li>
-               
-
-            </ul>
-        </div>
-
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- linkeo bootstrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+        <!-- linkeo css -->
+        <link rel="stylesheet" href="../style/style.css">
+        <!-- linkeo fuentes -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <!-- linkeo aos -->
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <title>Proyecto</title>
+    </head>
+    <body>
+         <!-- header>div>ul>(li>a)*3 forma abreviada de hacer un header con 3 li -->
+         <header>
+          <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="active" href="../index.html">INICIO</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="active" aria-current="page" href="../views/e-commerce.html">E-COMMERCE</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="active" href="../views/DesarrolloWeb.html">DESARROLLO WEB</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="active" href="../views/nosotros.html">NOSOTROS</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class=" active " href="../views/contactanos.html" >CONTACTANOS</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
-    <main>
-        <h1>E-commerce</h1>
+    <main class="BodyEcommerce">
+        <div  class="Ecommerce">
+             <h1>E-COMMMERCE</h1>
+        </div>
+        <div class="Secciones">
+                <section class="Ventas">
+                    <article>
+                        <h4>POTENCIA TUS VENTAS</h4>
+                            <p>La gran ventaja del comercio electrónico es la posibilidad de contar con un negocio de incidencia mundial, con disponibilidad para cualquier persona que cuente con una conexión a internet pueda acceder a los productos y servicios y esté dispuesto a cubrir los gastos de envío</p>
+                    </article>
+                </section> 
+                <section class="Beneficios">
+                    <article>
+                        <h4>BENEFICIOS DE TENER UN E-COMMERCE</h4>
+                            <p>Con una tienda física tienes restricciones de horario y no podrás vender en todo momento,mientras que con el E-commerce podras vender en todo momento.
+                                Al tener una tienda en línea podrás ofrecer tus productos y servicios, si cuentas con la logística necesaria, incluso fuera del país.</p>
+                    </article>
+                </section>
+        </div>
+        <div class="Argentina">
+            <section data-aos="flip-up">
+                <article>
+                    <h4>DE ARGENTINA PARA EL MUNDO</h4>
+                        <p>Con una tienda física tienes restricciones de horario y no podrás vender en todo momento,mientras que con el E-commerce podras vender en todo momento.
+                            Al tener una tienda en línea podrás ofrecer tus productos y servicios, si cuentas con la logística necesaria, incluso fuera del país.</p>
+                </article>
+            </section>
+            <div>
+                <a href="./contactanos.html">
+                    <button data-aos="zoom-in-down">
+                        SOLICITAR ASESORIA
+                    </button>
+                </a>
+            </div>
+        </div>
     </main>
     <footer>
         <div class="Contactanos">
@@ -58,4 +102,9 @@
         
      </footer>
 </body>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+  </script>
 </html>
+
